# stakedex-cli

./: Cargo.toml  Dockerfile.x86_64-linux-musl  README.md
scripts/init_record_dex/: makeJsons.js  recordDexes.js
src/: argparse.rs  global_lut_cache.rs  main.rs  pda.rs  serde.rs  tx_utils.rs
src/subcmd/: create_fee_acc.rs  fund_sol_bridge.rs  list_fee_accs.rs  mod.rs  record_dex.rs  view_fee_acc.rs  withdraw_fees.rs
src/subcmd/index/: consts.rs  mod.rs  parse.rs
src/subcmd/index/db/: mod.rs  test_utils.rs
src/subcmd/index/db/schema/: 1_down.sql  1_up.sql  mod.rs
src/subcmd/index/examples/: cpi_stake_wrapped_sol.json  cpi_swap_via_stake.json  stake_wrapped_sol.json  swap_via_stake.json
