[package]
name = "stakedex-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stakedex"
path = "src/main.rs"

[dependencies]
base64 = "0.21.2"
borsh = "^0.9.1"
bs58 = "^0.4"
clap = { version = "^4.0", features = ["derive"] }
clap2 = { package = "clap", version = "^2.0" } # required for solana-clap-utils
derive_more = "^0.99"
itertools = "^0.10"
lazy_static = "^1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rusqlite_migration = "1.0.2"
solana-account-decoder = "^1.14"
solana-address-lookup-table-program = "^1.14"
solana-clap-utils = "^1.14"
solana-cli-config = "^1.14"
solana-client = "^1.14"
solana-program = "^1.14"
solana-remote-wallet = { version = "^1.14", features = ["hidapi"] } # else throws "hidapi crate compilation disabled in solana-remote-wallet."
solana-sdk = "^1.14"
solana-transaction-status = "^1.14"
spl-associated-token-account = "1.1.1"
spl-governance = "2.2.4"
spl-token = "^3.0"
stakedex_interface = { git = "https://github.com/igneous-labs/stakedex-sdk", branch = "master" }
stakedex_sdk_common = { git = "https://github.com/igneous-labs/stakedex-sdk", branch = "master" }
tokio = { version = "^1", features = ["rt", "sync", "time"] }

[dev-dependencies]
serde_json = "^1"
