[package]
name = "stakedex-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stakedex"
path = "src/main.rs"

[dependencies]
base64 = "0.21.2"
borsh = "^0.9.1"
bs58 = "^0.4"
clap = { version = "^4.0", features = ["derive"] }
clap2 = { package = "clap", version = "^2.0" } # required for solana-clap-utils
derive_more = "^0.99"
itertools = "^0.10"
lazy_static = "^1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rusqlite_migration = "1.0.2"
solana-account-decoder = "=1.14.20"
solana-address-lookup-table-program = "=1.14.20"
solana-clap-utils = "=1.14.20"
solana-cli-config = "=1.14.20"
solana-client = "=1.14.20"
solana-program = "=1.14.20"
solana-remote-wallet = { version = "=1.14.20", features = ["hidapi"] } # else throws "hidapi crate compilation disabled in solana-remote-wallet."
solana-sdk = "=1.14.20"
solana-transaction-status = "=1.14.20"
spl-associated-token-account = "1.1.1"
spl-governance = "2.2.4"
spl-token = "^3.0"
stakedex_interface = { git = "https://github.com/igneous-labs/stakedex-sdk", branch = "master" }
stakedex_sdk_common = { git = "https://github.com/igneous-labs/stakedex-sdk", branch = "master" }
tokio = { version = "^1", features = ["rt", "sync", "time"] }

[dev-dependencies]
serde_json = "^1"

[patch.crates-io]
solana-streamer = { git = "https://github.com/igneous-labs/solana", branch = "fix/1.14.20-recvmmsg-try-into" } # to enable musl builds
solana-account-decoder = { git = "https://github.com/igneous-labs/solana", branch = "fix/1.14.20-recvmmsg-try-into" }
solana-address-lookup-table-program = { git = "https://github.com/igneous-labs/solana", branch = "fix/1.14.20-recvmmsg-try-into" }
solana-clap-utils = { git = "https://github.com/igneous-labs/solana", branch = "fix/1.14.20-recvmmsg-try-into" }
solana-cli-config = { git = "https://github.com/igneous-labs/solana", branch = "fix/1.14.20-recvmmsg-try-into" }
solana-client = { git = "https://github.com/igneous-labs/solana", branch = "fix/1.14.20-recvmmsg-try-into" }
solana-program = { git = "https://github.com/igneous-labs/solana", branch = "fix/1.14.20-recvmmsg-try-into" }
solana-remote-wallet = { git = "https://github.com/igneous-labs/solana", branch = "fix/1.14.20-recvmmsg-try-into" } # else throws "hidapi crate compilation disabled in solana-remote-wallet."
solana-sdk = { git = "https://github.com/igneous-labs/solana", branch = "fix/1.14.20-recvmmsg-try-into" }
solana-transaction-status = { git = "https://github.com/igneous-labs/solana", branch = "fix/1.14.20-recvmmsg-try-into" }
